--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "link-sharing-app",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-drizzle": "^1.0.2",
+    "@vercel/postgres": "^0.7.2",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.0",
+    "lucia": "^3.0.1",
+    "next": "14.1.3",
+    "oslo": "^1.1.3",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "server-only": "^0.0.1",
+    "tailwind-variants": "^0.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
