--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "^1.0.2",
+    "@node-rs/argon2": "^1.8.0",
     "@vercel/postgres": "^0.7.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.0",
